code25_all/scala/8629478.txt
scala> val a? = true
<console>:1: error: illegal start of simple pattern
   val a? = true
          ^

scala>  val a_? = true
a_?: Boolean = true

